--- a/002.md
+++ b/002.md
@@ -1,11 +1,2 @@
-# Chapter 1
-
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
+A line in English without title header. 
+日本語の行。
