--- a/003.md
+++ b/003.md
@@ -1,11 +1,1 @@
-# Chapter 1
-
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
-いろはにほへとちりぬるをわかみたれそつねならむういのおくやまけふこへてあさきゆめみしえいもせす
+A file without Japanese.
